# PracLab

./: .gitignore  404.html  CHANGELOG.md  PracLab.cs  PracLab.csproj  README.md  README_EN.md  index.html  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: build.yml
Commands/: BotCollisionHandler.cs  BotCommands.cs  ClearCommands.cs  ConVarCommands.cs  DamageHandler.cs  DryRunCommands.cs  EventHandlers.cs  GrenadeCommands.cs  GrenadeFunctions.cs  HelpCommand.cs  PracticeCommands.cs  ReplayCommands.cs  SpawnCommands.cs  SpawnMarkerCommands.cs  TeamCommands.cs  TimeGodCommands.cs  TimerCommand.cs
cfg/PracLab/: prac.cfg
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/en/: commands.md  configuration.md  developers.md  index.md  installation.md
documentation/docs/zh/: index.md  命令.md  安装.md  开发者.md  配置.md
en/: index.html
en/commands/: index.html
en/configuration/: index.html
en/developers/: index.html
en/installation/: index.html
lang/: en.json  zh-CN.json
publish/: PracLab.deps.json
publish/cfg/PracLab/: config.cfg  dryrun.cfg
replay-engine/: CMakeLists.txt  LICENSE  build.ps1  configure.ps1
replay-engine/configs/addons/metamod/: PracLabReplayEngine.linux.vdf
replay-engine/include/: praclab_replay.h
replay-engine/src/: exports.cpp  exports.h  hook.h  hooks.cpp  hooks.h  memory.cpp  memory.h  platform.cpp  platform.h  player_command.h  plugin.cpp  plugin.h  recorder.cpp  recorder.h  replayer.cpp  replayer.h  sig_scan.cpp  sig_scan.h  slot_resolver.cpp  slot_resolver.h  version_targets.cpp  version_targets.h  weapon_switcher.cpp  weapon_switcher.h
search/: search_index.json
zh/: index.html
zh/命令/: index.html
zh/安装/: index.html
zh/开发者/: index.html
zh/配置/: index.html
